Correción API